--- a/style.css
+++ b/style.css
@@ -5,12 +5,22 @@
   
   .nav-container {
     margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 40px 40px;
+    justify-items: center;
+    align-items: center;
   }
-  
+
   .gallery {
     width: 900px;
     height: 800px;
-    margin: 0 auto;
+    margin: 0px auto 8px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(8, 100px);
+    justify-items: center;
+    align-items: top;
   }
   
   .gallery img {
@@ -19,30 +29,44 @@
   }
   
   #img-1 {
-
+    display: grid;
+    grid-row: 1/5;
+    grid-column: 1/1;
   }
   
   #img-2 {
-
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 2/2;
   }
   
   #img-3 {
-  
-  }
+    display: grid;
+    grid-row: 1/7;
+    grid-column: 3/3;
+    }
   
   #img-4 {
-
+    display: grid;
+    grid-row: 5/9;
+   grid-column: 1/1;
   }
   
   #img-5 {
-
+    display: grid;
+    grid-row: 3/6;
+    grid-column: 2/2;
   }
   
   #img-6 {
-
+    display: grid;
+    grid-row: 7/9;
+    grid-column: 3/3;
   }
   
   #img-7 {
-
+    display: grid;
+    grid-row: 6/9;
+    grid-column: 2/2;
   }
   
